--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div id="page-wrapper">
 <section id="banner">
 	  <div class="inner">
-							<h2>Meléndez Maita main site</h2>
+							<h2>MELÉNDEZ MAITA main site</h2>
 							<p>This is the main site for the MELÉNDEZ MAITA brand. No more information is available at the moment.</a></p>
 						</div>
 					</section>
